2004-01-14  David Mosberger  <davidm@hpl.hp.com>
	    James E Wilson  <wilson@specifixinc.com>

	PR target/18987
	* config/ia64/ia64.c (process_set): For alloc insn, only call
	process_epilogue is !frame_pointer_needed.

	PR target/13158
	* config/ia64/ia64.c (ia64_expand_epilogue): Set RTX_FRAME_RELATED_P on
	sibcall alloc instruction.
	(process_set): Handle sibcall alloc instruction.

2005-01-13  David O'Brien  <obrien@FreeBSD.org>

	Backport from mainline:
	* config/freebsd-spec.h:  Use KSE pthread lib for -pthread.

2005-01-08  Sergey M. Samoylov  <ssamoylov@dev.rtsoft.ru>

	Backport:
	2004-02-12  Richard Sandiford  <rsandifo@redhat.com>
	PR bootstrap/13617
	* config/mips/mips-protos.h (mips_output_aligned_decl_common): Declare.
	(mips_declare_object): Make variadic.
	* config/mips/mips.h (ASM_OUTPUT_ALIGNED_DECL_COMMON): Use
	mips_output_aligned_decl_common.
	* config/mips/mips.c (mips_output_aligned_decl_common): New function.
	(mips_declare_object): Make variadic.

2005-01-08  Richard Sandiford  <rsandifo@redhat.com>

	PR target/17565
	* config/mips/mips.md (define_asm_attributes): Set can_delay to no.

2004-12-27 John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* vax.c (vax_address_cost, vax_rtx_cost): Correct casts.
	(vax_rtx_cost): Handle small offsets for both PLUS and MINUS.

2004-12-27  Steven Bosscher  <stevenb@suse.de>
	    John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	rtl-optimization/12863
        * config/vax/vax.h (CASE_DROPS_THROUGH): Don't define.
        * config/vax/vax.md (casesi): Emit a test-and-branch to make sure
        that the case is in range, to make sure the casesi insn is always
        in range and never falls through.
        (casesi1): Add comment to explain why casesi never falls through.
        Remove the unnamed special case casesi pattern.

2004-12-26  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/17643
	* config/pa/pa32-linux.h (FUNCTION_OK_FOR_SIBCALL): Return false when