@@ -1,3 +1,8 @@
+2005-01-18  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/short-compare-1.c: New test.
+	* gcc.dg/short-compare-2.c: Likewise.
+
 2005-01-03  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	Backport:
