@@ -1,3 +1,10 @@
+2005-01-18  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR rtl-optimization/19296
+	* combine.c (simplify_comparison): Rewrite the condition under
+	which a non-paradoxical SUBREG of a PLUS can be lifted when
+	compared against a constant.
+
 2004-01-14  David Mosberger  <davidm@hpl.hp.com>
 	    James E Wilson  <wilson@specifixinc.com>
 
